<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/text9"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"

        />

    <Button

        android:id="@+id/btn8"
       android:text="@string/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn7"
        android:text="@string/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn9"
        android:text="@string/text6"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn5"
        android:text="@string/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn8"
        android:layout_toEndOf="@+id/btn6"
        android:layout_toRightOf="@+id/btn6"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn4"
        android:text="@string/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn7"
        android:layout_toEndOf="@+id/btn5"
        android:layout_toRightOf="@+id/btn5"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn6"
        android:text="@string/text3"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn2"
        android:text="@string/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn5"
        android:layout_toEndOf="@+id/btn3"
        android:layout_toRightOf="@+id/btn3"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />


    <Button
        android:id="@+id/btn1"
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn2"
        android:layout_below="@+id/btn4"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />
    <Button
        android:id="@+id/btn0"
        android:text="@string/text0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn3"
        android:layout_below="@+id/btn2"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />
    <Button
        android:id="@+id/btn_div"
        android:text="@string/textdiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn7"
        android:layout_above="@+id/btn4"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />


    <Button
        android:id="@+id/btn_mul"
        android:text="@string/textmul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn4"
        android:layout_below="@id/btn_div"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn_add"
        android:text="@string/textadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_mul"
        android:layout_toRightOf="@id/btn1"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn_sub"
        android:text="@string/textsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add"
        android:layout_toRightOf="@+id/btn1"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />
    <Button
        android:id="@+id/btn_eql"
        android:text="@string/texteql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn0"
        android:layout_below="@id/btn1"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <Button
        android:id="@+id/btn_clear"
        android:text="@string/textclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn3"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@color/yellowishwhite"
        />

    <TextView
        android:id="@+id/textveiw_below"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/btn9"/>
    <TextView
        android:id="@+id/textview_above"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/textveiw_below"/>
</RelativeLayout>